matching, konversi, tmp to data folder

--- a/.gitignore
+++ b/.gitignore
@@ -7,15 +7,15 @@ __pycache__/
 
 # tmp
 /data/tmp/*
-!tmp/.gitkeep
+!/data/tmp/.gitkeep
 
 # hasil_konversi
 /data/hasil_konversi/*
-!hasil_konversi/.gitkeep
+!/data/hasil_konversi/.gitkeep
 
 # bukti_matching
 /data/bukti_matching/*
-!bukti_matching/.gitkeep
+!/data/bukti_matching/.gitkeep
 
 # banks
 banks/*
